--- a/package.json
+++ b/package.json
@@ -10,25 +10,61 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.75.4"
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native/assets-registry": "^0.75.4",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.8",
+    "axios": "^1.7.7",
+    "babel-plugin-dotenv-import": "^3.0.1",
+    "react": "^18.3.1",
+    "react-native": "^0.75.4",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-reanimated": "^3.15.5",
+    "react-native-rename": "^3.2.14",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.4",
-    "@react-native/eslint-config": "0.75.4",
-    "@react-native/metro-config": "0.75.4",
-    "@react-native/typescript-config": "0.75.4",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/runtime": "^7.25.7",
+    "@react-native/babel-preset": "^0.75.4",
+    "@react-native/eslint-config": "^0.75.4",
+    "@react-native/metro-config": "^0.75.4",
+    "@react-native/typescript-config": "^0.75.4",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/react": "^18.3.11",
+    "@types/react-test-renderer": "^18.3.0",
+    "@types/rn-fetch-blob": "^1.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.12.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.11.1",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-react": "^7.37.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-test-renderer": "^18.3.1",
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18"
