--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ DerivedData
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
+google-services.json
+ios/GoogleService-Info.plist
 
 # Android/IntelliJ
 #
