--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-native": "^0.75.4",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-google-mobile-ads": "^14.2.5",
     "react-native-modal": "^13.0.1",
     "react-native-orientation-locker": "^1.7.0",
     "react-native-reanimated": "^3.15.5",
